[package]
name = "robloxassetdeliveryrust"
version = "0.1.0"
edition = "2021"
authors = ["Sushi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.195"
serde_derive = "1.0.195"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3.30"
byteorder = "1.5.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.1"
